2007-12-28  Ville Vainio  <vivainio@gmail.com>

	* ipy_server.py: TCP socket server for "remote control" of an IPython 
	instance.

2007-12-28  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/dtutils.py: Add utilities for interactively running
	doctests.  Still needs work to more easily handle the namespace of
	the package one may be working on, but the basics are in place.

2007-12-27  Ville Vainio  <vivainio@gmail.com>

	* ipy_completers.py: Applied arno's patch to get proper list of 
	packages in import completer. Closes #196.

2007-12-20  Ville Vainio  <vivainio@gmail.com>

	* completer.py, generics.py(complete_object): Allow 
	custom complers based on python objects via simplegeneric.
	See generics.py / my_demo_complete_object

2007-12-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Prompts.py (BasePrompt.__nonzero__): add proper boolean
	behavior to prompt objects, useful for display hooks to adjust
	themselves depending on whether prompts will be there or not.

2007-12-13  Ville Vainio  <vivainio@gmail.com>

	* iplib.py(raw_input): unix readline does not allow unicode in
	history, encode to normal string. After patch by Tiago.
	Close #201

2007-12-12  Ville Vainio  <vivainio@gmail.com>

	* genutils.py (abbrev_cwd): Terminal title now shows 2 levels of 
	current directory.
	
2007-12-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (_select_shell): add support for controlling
	the pylab threading mode directly at the command line, without
	having to modify MPL config files.  Added unit tests for this
	feature, though manual/docs update is still pending, will do later.

2007-12-11  Ville Vainio  <vivainio@gmail.com>

	* ext_rescapture.py: var = !cmd is no longer verbose (to facilitate
	use in scripts)

2007-12-07  Ville Vainio  <vivainio@gmail.com>

	* iplib.py, ipy_profile_sh.py: Do not escape # on command lines 
	anymore (to \#) - even if it is a comment char that is implicitly 